cambios agregamos sitio de twich

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <p>
-        hi how are you 
-        
+        lo que he avanzado con platzi 
+        me gustan mis compañeros
     </p>
 </body>
 </html>
